# inkbridge

./: .env.example  .gitignore  INSTALL.md  LICENSE  PROJECT.md  README.md  RELEASE.txt  install.cmd  pack-release.cmd  start-inkbridge.cmd  stop-inkbridge.cmd
appload/: application.qrc  area.json  deploy.py  manifest.json
appload/backend/: entry
appload/frontend/: Main.qml
daemon/: Cargo.toml  deploy.py  inkbridge-daemon.service  install-service.sh
daemon/.cargo/: config.toml
daemon/src/: access.rs  auth.rs  beacon.rs  control.rs  crypto.rs  identity.rs  main.rs  mdns.rs  mux.rs  orientation.rs  packet.rs  pen.rs  touch.rs
docs/: appload-research.md  appload-ui-spec.md  feasibility.md  phase0-findings.md  security.md  touch-feasibility.md  touch-modes.md  touch-otd-output-mode-feasibility.md  wifi-connectivity-feasibility.md
otd-plugin/: ConnectionConfig.cs  ConnectionManager.cs  CryptoSession.cs  DirectTouchWithTaps.cs  Identity.cs  Inkbridge.csproj  InkbridgeDevice.cs  InkbridgeHoverFilter.cs  InkbridgeReport.cs  InkbridgeReportParser.cs  InkbridgeTelemetry.cs  InkbridgeTool.cs  InputKeys.cs  MdnsClient.cs  MonitorList.cs  PenPacket.cs  PluginConfig.cs  Reconnect.cs  TouchGestures.cs  TouchInjector.cs  TouchPacket.cs  TouchService.cs  TouchTarget.cs  mouse-mode-settings.json  tablet-spec.json  test-settings.json
protocol/: mux-v2.md  packet.md  touch-packet.md
tools/: grabprobe.py  monitor.py  penbtn.py  penclient.py  penprobe.sh  penrate.py  tiltcheck.py
tools/hiddiag/: Program.cs  hiddiag.csproj
