[package]
name = "inkbridge-daemon"
version = "0.1.0"
edition = "2021"
description = "Reads the rMPP pen digitizer and streams PenPackets over TCP to the Windows OTD plugin."

[dependencies]
evdev = "0.12"
libc = "0.2"
# Pure-Rust mDNS/DNS-SD responder + UUID (musl-clean: no C/ring deps). See mdns.rs / identity.rs.
mdns-sd = "0.11"
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
