[package]
name = "inkbridge-daemon"
version = "0.1.0"
edition = "2021"
description = "Reads the rMPP pen digitizer and streams PenPackets over TCP to the Windows OTD plugin."

[dependencies]
evdev = "0.12"
libc = "0.2"
# Pure-Rust mDNS/DNS-SD responder + UUID (musl-clean: no C/ring deps). See mdns.rs / identity.rs.
mdns-sd = "0.11"
uuid = { version = "1", features = ["v4"] }
# Pure-Rust P-256 ECDSA (auth) + ECDH (session key) for the identity handshake. auth.rs / crypto.rs
p256 = { version = "0.13", features = ["ecdsa", "ecdh"] }
rand_core = { version = "0.6", features = ["getrandom"] }
# Pure-Rust AEAD stream encryption keyed by the ECDH session (musl-clean). crypto.rs
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
